<resources>
    <string name="app_name">Registration App</string>
    <string name="textView">Registration Form</string>
    <string name="textView4">Welcome to Adventure Learning Club!</string>
    <string name="textView9">Full Name</string>
    <string name="textView6">Gender</string>
    <string name="radioButton">Male</string>
    <string name="radioButton2">Female</string>
    <string name="textView7">Student ID</string>
    <string name="textView8">School</string>
    <string name="textView10">E-mail</string>
    <string name="textView11">Phone</string>
    <string name="button2">REGISTER</string>
</resources>
